--- a/templates/base/css/style.css
+++ b/templates/base/css/style.css
@@ -9,20 +9,6 @@ html {
   box-sizing: inherit;
 }
 
-/* CLEARFIX */
-
-.clearfix:before,
-.clearfix:after {
-  content: "";
-  display: table;
-}
-.clearfix:after {
-  clear: both;
-}
-.clearfix {
-  zoom: 1; /* For IE 6/7 (trigger hasLayout) */
-}
-
 /* -- BASIC --*/
 
 @charset "UTF-8";
@@ -33,7 +19,7 @@ html {
 html, body {
   min-height: 100%;
   height: 100%;
-  margin: 0px;
+  margin: 0;
 }
 body  {
   font-family: Circular,Inter,-apple-system,BlinkMacSystemFont,Helvetica,Arial,sans-serif,"Apple Color Emoji";
@@ -47,7 +33,6 @@ body  {
   -moz-osx-font-smoothing: grayscale;
 }
 pre {
-  background-color: var(--c-neutral);
   color: var(--c-text);
   font-size: var(--c-font-size-xs);
 }
@@ -691,10 +676,6 @@ nav.menu ul li a .users-image {
 }
 .rounded-pill {
   border-radius: 50rem;
-}
-
-@media only screen and (max-width: 768px) {
-
 }
 
 @media only screen and (max-width: 480px) {
