--- a/templates/base/css/swup.css
+++ b/templates/base/css/swup.css
@@ -675,3 +675,14 @@ nav.menu ul li a .users-image {
     padding: 10px;
   }
 }
+
+/* Define a transition duration during page visits */
+html.is-changing .transition-fade {
+  transition: opacity 0.25s;
+  opacity: 1;
+}
+
+/* Define the styles for the unloaded pages */
+html.is-animating .transition-fade {
+  opacity: 0;
+}
