--- a/templates/base/include/footer.latte
+++ b/templates/base/include/footer.latte
@@ -1,4 +1,4 @@
-<footer class="footer border-t items-center p-4">
+<footer class="footer border-t dark:border-slate-700 items-center p-4">
     <aside class="grid-flow-col items-center">
         <p>Build with <a href="https://dooper.io/ivy" target="_blank"
                          class="hover:underline">ivy</a> © {date("Y")}</p>
