--- a/templates/base/include/header.latte
+++ b/templates/base/include/header.latte
@@ -1,4 +1,3 @@
-{php $profile = isset($_SESSION['auth_user_id']) ? (new \Ivy\Profile)->where('user_id', $_SESSION['auth_user_id'])->fetchOne() : null}
 <header>
     <div class="border-b dark:border-slate-700 flex">
         <div class="flex-1 p-4">
@@ -12,17 +11,16 @@
             {if \Ivy\User::isLoggedIn()}
                 <div class="dropdown dropdown-end h-10">
                     <div tabindex="0" role="button" class="avatar">
-                        {if isset($profile->users_image)}
+                        {if !empty(\Ivy\Profile::getUserImage())}
                             <div class="w-10 rounded-full">
-                                <img alt="{$profile->username}"
-                                     src="{= _BASE_PATH . 'media/item/thumb/' . $profile->users_image}"/>
+                                <img alt="{\Ivy\Profile::getUserName()}"
+                                     src="{= _BASE_PATH . 'media/item/thumb/' . \Ivy\Profile::getUserImage()}"/>
                             </div>
                         {else}
                             {\Ivy\Button::link(_BASE_PATH . 'admin/profile', null, 'feather/user.svg', 'Profile')}
                         {/if}
                     </div>
-                    <ul
-                            tabindex="0"
+                    <ul tabindex="0"
                             class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
                         <li>
                             <a href="{= _BASE_PATH . 'admin/profile'}">
