--- a/templates/base/buttons/button.switch.latte
+++ b/templates/base/buttons/button.switch.latte
@@ -2,5 +2,5 @@
 <input class="form-check-input hidden" type="checkbox" role="switch" name="{$name}"
        id="{$id ?? $name}" value="1" {!empty($value) ? "checked" : ''} >
 <label class="switch" for="{$id ?? $name}">
-    <span class="slider bg-gray-300 dark:bg-gray-600"></span>
+    <span class="slider"></span>
 </label>
