--- a/templates/base/admin/setting.latte
+++ b/templates/base/admin/setting.latte
@@ -19,25 +19,25 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {foreach $settings as $setting}
+                            {foreach $settings as $key => $setting}
                                 {if isset($setting->name)}
                                     <tr>
                                         <td>
-                                            {\Ivy\Button::switch('setting[' . $setting->getId() . '][bool]',$setting->bool)}
+                                            {\Ivy\Button::switch("setting[$key][bool]", $setting->bool)}
                                         </td>
                                         <td class="font-bold">
                                             {$setting->name}
                                         </td>
                                         <td>
                                             <label>
-                                                <input type="text" name="setting[{$setting->getId()}][value]"
+                                                <input type="text" name="setting[{$key}][value]"
                                                        value="{$setting->value}" class="input input-bordered w-full">
                                             </label>
                                         </td>
                                         {if empty($setting->info) && !empty($setting->name)}
                                             <td>
                                                 <label>
-                                                    <input type="text" name="setting[{$setting->getId()}][info]"
+                                                    <input type="text" name="setting[{$key}][info]"
                                                            value="{$setting->info}" class="input input-bordered w-full">
                                                 </label>
                                             </td>
@@ -45,10 +45,10 @@
                                             <td>{$setting->info}</td>
                                         {/if}
                                         <td class="text-right">
-                                            <input type="hidden" name="setting[{$setting->getId()}][id]"
+                                            <input type="hidden" name="setting[{$key}][id]"
                                                    value="{$setting->getId()}">
                                             <div class="join">
-                                                {\Ivy\Button::delete("setting[" . $setting->getId() . "][delete]", "setting_" .
+                                                {\Ivy\Button::delete("setting[$key][delete]", "setting_" .
                                                 $setting->getId())}
                                             </div>
                                         </td>
